force-app/main/default/objects/Order_Line_Recipient__c/Order_Line_Recipient__c.object-meta.xml
<CustomObject>
    <label>Order Line Recipient</label>
    <nameField>
        <displayFormat>OLR-{000000}</displayFormat>
        <label>Line Recipient Sequence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Line Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>