force-app/main/default/objects/Order_Line_Recipient__c/fields/AccountManager__c.field-meta.xml
<CustomField>
    <fullName>AccountManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Order_Line_Recipients1</relationshipName>
    <type>Lookup</type>
</CustomField>