force-app/main/default/objects/Order_Line_Recipient__c/fields/AM_Market_Goal__c.field-meta.xml
<CustomField>
    <fullName>AM_Market_Goal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AM Market Goal</label>
    <referenceTo>Market_Goal__c</referenceTo>
    <relationshipLabel>Order Line Recipients</relationshipLabel>
    <relationshipName>Order_Line_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>