force-app/main/default/objects/Order_Line_Recipient__c/fields/Broker_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Broker_Dealer__c</fullName>
    <formula>Recipient__r.Parent_Company_Aka_Broker_Dealer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Dealer</label>
    <type>Text</type>
</CustomField>