force-app/main/default/objects/Order_Line_Recipient__c/fields/FSP_Split_Discount__c.field-meta.xml
<CustomField>
    <fullName>FSP_Split_Discount__c</fullName>
    <formula>OrderProductLine__r.FSP_Discount_Amount__c /  OrderProductLine__r.Recipient_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FSP Split Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>