force-app/main/default/objects/Order_Line_Recipient__c/fields/FSP_Split_Value_Recipient__c.field-meta.xml
<CustomField>
    <fullName>FSP_Split_Value_Recipient__c</fullName>
    <formula>OrderProductLine__r.FSP_Split_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FSP Split Value Recipient</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>