force-app/main/default/objects/Order_Line_Recipient__c/fields/Graphics_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Graphics_Assigned__c</fullName>
    <formula>Order_Fulfillment__r.Graphics_Assigned__r.FirstName + &quot; &quot; + Order_Fulfillment__r.Graphics_Assigned__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Graphics Assigned</label>
    <type>Text</type>
</CustomField>