force-app/main/default/objects/Order_Line_Recipient__c/fields/Is_Kit_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Is_Kit_Bundle__c</fullName>
    <formula>OrderProductLine__r.KitBundle__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Kit Bundle</label>
    <type>Checkbox</type>
</CustomField>