force-app/main/default/objects/Order_Line_Recipient__c/fields/List_Price_Split__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Split__c</fullName>
    <formula>OrderProductLine__r.Line_Total__c / OrderProductLine__r.Recipient_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Price Split</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>