force-app/main/default/objects/Order_Line_Recipient__c/fields/Market_Project__c.field-meta.xml
<CustomField>
    <fullName>Market_Project__c</fullName>
    <formula>Order__r.Market__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Project</label>
    <type>Text</type>
</CustomField>