force-app/main/default/objects/Order_Line_Recipient__c/fields/Order_Fulfillment__c.field-meta.xml
<CustomField>
    <fullName>Order_Fulfillment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Fulfillment</label>
    <referenceTo>Order_Fulfillment__c</referenceTo>
    <relationshipLabel>Order Line Recipients</relationshipLabel>
    <relationshipName>Order_Line_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>