force-app/main/default/objects/Order_Line_Recipient__c/fields/OrderProductLine__c.field-meta.xml
<CustomField>
    <fullName>OrderProductLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product Line</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SalesOrderProductLine__c.SalesOrder__c</field>
            <operation>equals</operation>
            <valueField>$Source.Order__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SalesOrderProductLine__c</referenceTo>
    <relationshipName>Order_Line_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>