force-app/main/default/objects/Order_Line_Recipient__c/fields/Parent_Line_Kit_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Parent_Line_Kit_Bundle__c</fullName>
    <formula>OrderProductLine__r.KitBundleLine__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Line Kit Bundle</label>
    <type>Text</type>
</CustomField>