force-app/main/default/objects/Order_Line_Recipient__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Recipient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Order_Line_Recipients1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>