force-app/main/default/objects/Order_Line_Recipient__c/fields/Recipient_Count_Failsafe__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Count_Failsafe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recipient Count Failsafe</label>
    <type>Checkbox</type>
</CustomField>