force-app/main/default/objects/Order_Line_Recipient__c/fields/Recipient_Full_ID__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Full_ID__c</fullName>
    <formula>Recipient__r.Full_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recipient Full ID</label>
    <type>Text</type>
</CustomField>