force-app/main/default/objects/Order_Line_Recipient__c/fields/Recipient_Split_Amount__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Split_Amount__c</fullName>
    <formula>OrderProductLine__r.Split_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recipient Split Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>