force-app/main/default/objects/Order_Line_Recipient__c/fields/Research_ID__c.field-meta.xml
<CustomField>
    <fullName>Research_ID__c</fullName>
    <formula>Recipient__r.Research_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Research ID</label>
    <type>Text</type>
</CustomField>