force-app/main/default/objects/Order_Line_Recipient__c/fields/Sale_Month__c.field-meta.xml
<CustomField>
    <fullName>Sale_Month__c</fullName>
    <formula>MONTH( DATEVALUE(Line_Effective_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sale Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>