force-app/main/default/objects/Order_Line_Recipient__c/fields/Split_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Split_Discount_Amount__c</fullName>
    <formula>OrderProductLine__r.Total_Discount__c /  OrderProductLine__r.Recipient_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Split Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>